[fixed] Double src/kotlin to src/java

--- a/lib/promena-http-client/pom.xml
+++ b/lib/promena-http-client/pom.xml
@@ -119,7 +119,7 @@
                         </goals>
                         <configuration>
                             <sourceDirs>
-                                <source>src/main/kotlin</source>
+                                <source>src/main/java</source>
                                 <source>src/main/kotlin</source>
                             </sourceDirs>
                         </configuration>
