--- a/transformer/silly-transformer/silly-transformer/pom.xml
+++ b/transformer/silly-transformer/silly-transformer/pom.xml
@@ -9,9 +9,14 @@
     <version>1.0.0</version>
 
     <properties>
+        <kotlin.version>1.3.21</kotlin.version>
         <java.version>1.8</java.version>
 
         <promena-transformer.version>3.0.0-alpha</promena-transformer.version>
+
+        <docker-test-runner.version>1.0.0-alpha</docker-test-runner.version>
+
+        <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
     </properties>
 
     <dependencies>
@@ -20,14 +25,63 @@
             <artifactId>promena-transformer-internal</artifactId>
             <version>${promena-transformer.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>pl.beone.lib</groupId>
+            <artifactId>docker-test-runner</artifactId>
+            <version>${docker-test-runner.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlin.version}</version>
+
+                <configuration>
+                    <args>
+                        <arg>-Xjsr305=strict</arg>
+                    </args>
+
+                    <jvmTarget>${java.version}</jvmTarget>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <source>src/main/java</source>
+                                <source>src/main/kotlin</source>
+                            </sourceDirs>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>test-compile</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>test-compile</goal>
+                        </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <sourceDir>src/test/java</sourceDir>
+                                <sourceDir>src/test/kotlin</sourceDir>
+                            </sourceDirs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
