--- a/util/promena-cmd-http-client/pom.xml
+++ b/util/promena-cmd-http-client/pom.xml
@@ -116,7 +116,7 @@
                         </goals>
                         <configuration>
                             <sourceDirs>
-                                <source>src/main/kotlin</source>
+                                <source>src/main/java</source>
                                 <source>src/main/kotlin</source>
                             </sourceDirs>
                         </configuration>
