[improved] Removed MimeType class and moved it to MediaType [improved] All to JVM 11 and Kotlin 1.3.31 [improved] From mockito-kotlin 1.5.0 to mockito-kotlin to 2.1.0 (compatible with Java 11)

--- a/ex/promena-transformer/promena-transformer-internal/pom.xml
+++ b/ex/promena-transformer/promena-transformer-internal/pom.xml
@@ -17,7 +17,18 @@
             <artifactId>promena-transformer-contract</artifactId>
             <version>${promena.version}</version>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>pl.beone.lib</groupId>
+            <artifactId>type-converter</artifactId>
+            <version>${type-converter.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-jupiter-api.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
