--- a/ex/promena-core/promena-core-integration-test/src/test/resources/resource-test.conf
+++ b/ex/promena-core/promena-core-integration-test/src/test/resources/resource-test.conf
@@ -41,10 +41,10 @@ akka.actor.kryo.classes.1=java.util.ArrayList
 akka.actor.kryo.classes.2=java.util.LinkedHashMap
 akka.actor.kryo.classes.3="java.util.Collections$EmptyMap"
 akka.actor.kryo.classes.4="java.util.Collections$EmptyList"
+akka.actor.kryo.classes.5=pl.beone.lib.typeconverter.applicationmodel.exception.TypeConversionException
 
-akka.actor.kryo.classes.5=pl.beone.promena.transformer.applicationmodel.mediatype.MediaType
-akka.actor.kryo.classes.6=pl.beone.promena.transformer.applicationmodel.exception.data.DataException
-akka.actor.kryo.classes.7=pl.beone.promena.transformer.applicationmodel.exception.general.ConversionException
+akka.actor.kryo.classes.6=pl.beone.promena.transformer.applicationmodel.mediatype.MediaType
+akka.actor.kryo.classes.7=pl.beone.promena.transformer.applicationmodel.exception.data.DataException
 akka.actor.kryo.classes.8=pl.beone.promena.transformer.applicationmodel.exception.transformer.TransformerException
 akka.actor.kryo.classes.9=pl.beone.promena.transformer.applicationmodel.exception.transformer.TransformerNotFoundException
 akka.actor.kryo.classes.10=pl.beone.promena.transformer.applicationmodel.exception.transformer.TransformerTimeoutException
