--- a/sdk/promena-parent/pom.xml
+++ b/sdk/promena-parent/pom.xml
@@ -16,11 +16,11 @@
     <packaging>pom</packaging>
 
     <properties>
-        <java.version>1.8</java.version>
-        <kotlin.version>1.3.21</kotlin.version>
+        <kotlin.version>1.3.31</kotlin.version>
+        <java.version>11</java.version>
 
         <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
-        <mockito-kotlin.version>1.6.0</mockito-kotlin.version>
+        <mockito-kotlin.version>2.1.0</mockito-kotlin.version>
         <akka.version>2.5.20</akka.version>
         <akka-kryo-serialization.version>0.5.2</akka-kryo-serialization.version>
         <kryo.version>4.0.0</kryo.version>
@@ -76,7 +76,7 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>com.nhaarman</groupId>
+                <groupId>com.nhaarman.mockitokotlin2</groupId>
                 <artifactId>mockito-kotlin</artifactId>
                 <version>${mockito-kotlin.version}</version>
                 <scope>test</scope>
