[improved][promena-transformer-archetype] Groovy post script removes parent from POMs

--- a/sdk/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__-configuration/pom.xml
+++ b/sdk/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__-configuration/pom.xml
@@ -5,11 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>${groupId}</groupId>
-        <artifactId>${rootArtifactId}-root</artifactId>
-        <version>${version}</version>
+        <groupId>to-delete</groupId>
+        <artifactId>to-delete</artifactId>
+        <version>to-delete</version>
     </parent>
 
+    <groupId>${groupId}</groupId>
     <artifactId>${artifactId}</artifactId>
     <version>${version}</version>
 
