[improved][promena-transformer-archetype] Changed groupId name

--- a/sdk/promena-transformer/promena-transformer-archetype/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-archetype/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>pl.beone.promena.transformer.sdk.archetype</groupId>
+  <groupId>pl.beone.promena.sdk</groupId>
   <artifactId>promena-transformer-archetype</artifactId>
   <version>1.0.0-alpha</version>
   <packaging>maven-archetype</packaging>
