[added][promena-core] More generic function to TransformationUseCase [improved][promena-core] Changed to data class MapCommunicationParameters

--- a/ex/promena-core/pom.xml
+++ b/ex/promena-core/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>promena-core</artifactId>
     <version>3.0.0-alpha</version>
 
-    <name>[SERVER] Core</name>
+    <name>Core</name>
 
     <packaging>pom</packaging>
     <modules>
