[added][promena-extension-parent] Transformer dependencies [added][promena-transformer-parent] Missing transformer dependencies

--- a/sdk/promena-extension/promena-extension-parent/pom.xml
+++ b/sdk/promena-extension/promena-extension-parent/pom.xml
@@ -18,6 +18,7 @@
 
     <properties>
         <promena-core.version>3.0.0-alpha</promena-core.version>
+        <promena-transformer.version>3.0.0-alpha</promena-transformer.version>
     </properties>
 
     <dependencyManagement>
@@ -71,6 +72,22 @@
                 <groupId>pl.beone.promena.core</groupId>
                 <artifactId>promena-core-use-case</artifactId>
                 <version>${promena-core.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>pl.beone.promena.transformer</groupId>
+                <artifactId>promena-transformer-application-model</artifactId>
+                <version>${promena-transformer.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>pl.beone.promena.transformer</groupId>
+                <artifactId>promena-transformer-contract</artifactId>
+                <version>${promena-transformer.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>pl.beone.promena.transformer</groupId>
+                <artifactId>promena-transformer-internal</artifactId>
+                <version>${promena-transformer.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
