[improved][promena-listener-cluster-member] Folder structure. Moved to extension folder [improved][promena-listener-cluster-member] Adapted to promena-extension-parent POM

--- a/extension/listener/cluster-member/promena-listener-cluster-member-configuration/pom.xml
+++ b/extension/listener/cluster-member/promena-listener-cluster-member-configuration/pom.xml
@@ -15,6 +15,7 @@
         <dependency>
             <groupId>pl.beone.promena.listener</groupId>
             <artifactId>promena-listener-cluster-member-external-akka</artifactId>
+            <version>${promena-listener-cluster-member.version}</version>
         </dependency>
 
         <dependency>
