[added][docker-test-runner] Maven command property

--- a/lib/docker-test-runner/src/test/resources/base-docker-test.properties
+++ b/lib/docker-test-runner/src/test/resources/base-docker-test.properties
@@ -1,6 +1,8 @@
 docker.test.project.path=${basedir}
 docker.test.project.container.path=/test
 
+docker.test.maven.container.test.command=surefire:test
+
 docker.test.image.name=
 docker.test.image.custom.enabled=true
 docker.test.image.custom.name=${artifactId}:test
