--- a/extension/connector/activemq/promena-connector-activemq-configuration/pom.xml
+++ b/extension/connector/activemq/promena-connector-activemq-configuration/pom.xml
@@ -17,10 +17,11 @@
             <artifactId>promena-connector-activemq-delivery-jms</artifactId>
             <version>${promena-connector-activemq.version}</version>
         </dependency>
+
         <dependency>
-            <groupId>pl.beone.promena.connector</groupId>
-            <artifactId>promena-connector-activemq-external-spring-jms</artifactId>
-            <version>${promena-connector-activemq.version}</version>
+            <groupId>pl.beone.lib</groupId>
+            <artifactId>kryo-message-converter</artifactId>
+            <version>${kryo-message-converter.version}</version>
         </dependency>
     </dependencies>
 </project>
