[improved][promena-transformer-archetype] Set default debugger level to DEBUG [improved][promena-transformer-archetype] Updated to last changes in docker-test-runner

--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
@@ -56,7 +56,16 @@
         <testResources>
             <testResource>
                 <directory>src/test/resources</directory>
+                <excludes>
+                    <exclude>base-docker-test.properties</exclude>
+                </excludes>
+            </testResource>
+            <testResource>
+                <directory>src/test/resources</directory>
                 <filtering>true</filtering>
+                <includes>
+                    <include>base-docker-test.properties</include>
+                </includes>
             </testResource>
         </testResources>
 
