--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/src/test/resources/base-docker-test.properties
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/src/test/resources/base-docker-test.properties
@@ -1,4 +1,7 @@
 docker.test.project.path=${basedir}
+docker.test.project.container.path=/test
+
+docker.test.maven.container.test.command=surefire:test
 
 docker.test.image.name=
 docker.test.image.custom.enabled=true
@@ -9,6 +12,7 @@ docker.test.image.custom.deleteOnExit=false
 
 docker.test.m2.mount.enabled=true
 docker.test.m2.mount.path=${settings.localRepository}/..
+docker.test.m2.container.mount.path=/root/.m2
 
 docker.test.debugger.enabled=false
 docker.test.debugger.port=5005
