--- a/sdk/promena-transformer/promena-transformer-archetype/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-archetype/pom.xml
@@ -4,12 +4,37 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+<!--    TODO moze maven sdk?-->
     <groupId>pl.beone.promena.sdk</groupId>
     <artifactId>promena-transformer-archetype</artifactId>
     <version>1.0.0-alpha</version>
     <packaging>maven-archetype</packaging>
 
     <name>[SDK][ARCHETYPE] Promena transformer</name>
+
+    <repositories>
+        <repository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </repository>
+
+        <repository>
+            <id>codelds</id>
+            <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>beone-releases</id>
+            <url>http://nexus.office.beone.pl/repository/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>beone-snapshots</id>
+            <url>http://nexus.office.beone.pl/repository/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 
     <build>
         <extensions>
