--- a/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-test.properties
+++ b/mm/alfresco-promena-message-broker-client/src/test/resources/alfresco-global-test.properties
@@ -1,12 +1,8 @@
-promena.communication.file.location=
-
-promena.transformation.saveIfZero=true
-
-promena.client.message-broker.waitMax=
+promena.client.message-broker.waitMax=10s
 
 promena.client.message-broker.consumer.queue.request=Promena.request
 promena.client.message-broker.consumer.queue.response=Promena.response
 promena.client.message-broker.consumer.queue.response.error=Promena.response.error
 
-promena.client.message-broker.spring.activemq.broker-url=${messaging.broker.url}
+promena.client.message-broker.spring.activemq.broker-url=failover:(nio://localhost:61616)?timeout=3000&jms.useCompression=true
 promena.client.message-broker.spring.jms.pub-sub-domain=false
