--- a/mm/alfresco-promena-message-broker-client/pom.xml
+++ b/mm/alfresco-promena-message-broker-client/pom.xml
@@ -14,6 +14,8 @@
 <!--        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>-->
         <java.version>1.8</java.version>
 
+        <spring.version>5.1.3.RELEASE</spring.version>
+
         <assertj.version>3.10.0</assertj.version>
         <mockito-kotlin.version>2.1.0</mockito-kotlin.version>
         <!-- Alfresco Maven Plugin version to use -->
@@ -98,15 +100,27 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.nhaarman.mockitokotlin2</groupId>
-            <artifactId>mockito-kotlin</artifactId>
-            <version>${mockito-kotlin.version}</version>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk</artifactId>
+            <version>1.9.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
