[added][alfresco-promena-message-broker-client] Configurable TransformerResponseErrorConsumer properties (tryAgain and wait) [added][alfresco-promena-message-broker-client] Initializing ActiveMQ container besides outside of test class [added][alfresco-promena-message-broker-client] TransformerResponseErrorConsumer test

--- a/mm/alfresco-promena-message-broker-client/src/main/resources/alfresco/module/alfresco-promena-message-broker-client/alfresco-global.properties
+++ b/mm/alfresco-promena-message-broker-client/src/main/resources/alfresco/module/alfresco-promena-message-broker-client/alfresco-global.properties
@@ -2,6 +2,9 @@ promena.communication.file.location=
 
 promena.transformation.saveIfZero=true
 
+promena.transformation.error.tryAgain=false
+promena.transformation.error.delay=5s
+
 promena.client.message-broker.waitMax=
 
 promena.client.message-broker.consumer.queue.request=Promena.request
